Add composer test script

--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,10 @@
             "sabri\\tiktok\\": "src"
         },
         "classmap": []
+    },
+    "scripts": {
+        "test": [
+            "phpunit --configuration phpunit.xml"
+        ]
     }
 }
