--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "mockery/mockery": "^1.2"
     },
     "require": {
-        "guzzlehttp/guzzle": "^6.3",
+        "guzzlehttp/guzzle": "^6.3|^7.0",
         "vlucas/phpdotenv": "^4.0"
     },
     "autoload": {
