--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "require": {
         "guzzlehttp/guzzle": "^6.3|^7.0",
-        "vlucas/phpdotenv": "^4.0"
+        "vlucas/phpdotenv": "^4.0|^5.0"
     },
     "autoload": {
         "psr-4": {
