--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
     "homepage" : "http://github.com/snuzi",
     "authors": [
         {
-            "name" : "Sabri Nuzi",
-            "email" : "sabrinuzi@gmail.com"
+            "name" : "Sabri Nu"
         }
     ],
     "require-dev": {
