--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "homepage" : "http://github.com/snuzi",
     "authors": [
         {
-            "name" : "Sabri Nu"
+            "name" : "snuzi"
         }
     ],
     "require-dev": {
